--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "vue": "^2.6.10"
- },
+  "dependencies": {},
   "devDependencies": {
-    "webpack": "^3.6.0",
+    "bootstrap": "^3.4.1",
+    "vue": "^2.6.10",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.9.1"
   }
 }
