--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "这是我的一个小demo，正在完善中..... 使用bootstrap和vue.js",
   "main": "gulpfile.js",
   "dependencies": {
-    "gulp": "^4.0.2"
+    "bootstrap": "^3.3.7",
+    "gulp": "^4.0.2",
+    "jquery": "^1.12.4",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
